--- a/TP1/Vagrantfile
+++ b/TP1/Vagrantfile
@@ -3,6 +3,7 @@
 
 Vagrant.configure("2") do |config|
   config.vm.box = "debian/stretch64"
+  config.vm.synced_folder '.', '/vagrant', disabled: true
   config.vm.box_url = "https://vagrantcloud.com/debian/stretch64"
   
   config.vm.provider "virtualbox" do |v|
@@ -13,7 +14,8 @@ Vagrant.configure("2") do |config|
 	  ansible.compatibility_mode = "2.0"
 	  ansible.host_key_checking = false
 	  ansible.verbose = "v"
-	  ansible.playbook = "playbook.yml"
+    ansible.playbook = "playbook.yml"
+    ansible.limit = "all"
   end
   
   config.vm.define :lamp, primary: true do |lamp_config|
